<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/semi_transparent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/llt_match_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <com.obs.CustomTextView
            style="@style/proximanova_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/match_title"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <com.obs.CustomTextView
            android:id="@+id/tv_matches"
            style="@style/proximanova_semibold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/match_description"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civ_match_one"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:src="@color/gray"
                    app:borderWidth="0dp"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="2dp"
                    app:fabSize="auto"
                    app:useCompatPadding="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civ_match_two"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@color/gray"
                    app:borderWidth="0dp"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="2dp"
                    app:fabSize="auto"
                    app:useCompatPadding="true" />

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llt_match_footer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <com.obs.CustomButton
            android:id="@+id/btn_send_message"
            style="@style/proximanova_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:background="@drawable/oval_gradient_btn"
            android:text="@string/send_message"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <com.obs.CustomButton
            android:id="@+id/btn_keep_swiping"
            style="@style/proximanova_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:background="@drawable/oval_gradient_layer_btn"
            android:text="@string/keep_swiping"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/llt_share_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="invisible">

            <com.obs.CustomTextView
                style="@style/igniter_clone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center"
                android:text="@string/ic_share"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.obs.CustomTextView
                style="@style/proximanova_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tell_friends"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>